-Mejora de rendimiento con carga dinamica. -Mejoras de visualizacion.

--- a/EventU/res/values/strings.xml
+++ b/EventU/res/values/strings.xml
@@ -23,6 +23,7 @@
 
     <!-- Ver evento -->
     <string name="detalleEventoTitulo">Detalle evento</string>
+    <string name="cargandoInfo">Cargando información&#8230;</string>
     <string name="detalleEventoSi">Si</string>
     <string name="detalleEventoNo">No</string>
     <string name="detalleEventoAsistencia"> personas asistiran, ¿iras?</string>
